--- a/.github/workflows/docker-image-build-push.yml
+++ b/.github/workflows/docker-image-build-push.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Docker
-      uses: docker/setup-docker@v2
+      uses: docker/setup-buildx-action@v1
       with:
         dockerfile: backend/Dockerfile  # Path to your Dockerfile if it's not in the root
 
