--- a/.github/workflows/docker-image-build-push.yml
+++ b/.github/workflows/docker-image-build-push.yml
@@ -17,7 +17,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build Docker Image
-      run: docker build --tag hariramprasanth/live-stream-backend:${{ github.run_id }} ./backend/Dockerfile
+      run: docker build --tag hariramprasanth/live-stream-backend:${{ github.run_id }} ./backend/
 
     - name: Log in to Docker Hub
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
