--- a/kubernetes/virtual-service.yaml
+++ b/kubernetes/virtual-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: live-stream-vs
 spec:
   hosts:
-    - "a97fa899580cd4f3387fb82c4ebe248f-1176312932.ap-south-1.elb.amazonaws.com"
+    - "Load balancer domain or gateway domain"
   gateways: 
     - live-stream-gateway
   http:
