--- a/kubernetes/live-stream-backend-deployment.yaml
+++ b/kubernetes/live-stream-backend-deployment.yaml
@@ -23,15 +23,31 @@ spec:
 
 ---
 
-kind: Service
+# kind: Service
+# apiVersion: v1
+# metadata:
+#   name:  ls-backend
+# spec:
+#   selector:
+#     app: ls-backend
+#   type: ClusterIP 
+#   ports:
+#   - name: ls-backend
+#     port:  80
+#     targetPort:  8080
+
+---
 apiVersion: v1
+kind: Service
 metadata:
-  name:  ls-backend
+  name: ls-backend
+
 spec:
   selector:
     app: ls-backend
-  type: ClusterIP 
   ports:
-  - name: ls-backend
-    port:  80
-    targetPort:  8080
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+      name: http-port
+  type: LoadBalancer
