--- a/kubernetes/live-stream-backend-deployment.yaml
+++ b/kubernetes/live-stream-backend-deployment.yaml
@@ -23,37 +23,37 @@ spec:
 
 ---
 
-# kind: Service
-# apiVersion: v1
-# metadata:
-#   name:  ls-backend
-# spec:
-#   selector:
-#     app: ls-backend
-#   type: ClusterIP 
-#   ports:
-#   - name: ls-backend
-#     port:  80
-#     targetPort:  8080
-
----
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
-  name: ls-backend
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: <arn of the certificate>
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+  name:  ls-backend
 spec:
   selector:
     app: ls-backend
+  type: ClusterIP 
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
-      name: http-port
-    - protocol: TCP
-      port: 443
-      targetPort: 8080
-      name: https-port
-  type: LoadBalancer
+  - name: ls-backend
+    port:  80
+    targetPort:  8080
+
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: ls-backend-lb
+#   annotations:
+#     service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-south-1:160071257600:certificate/e7324c70-1689-407b-9ae0-64ad6d92627e
+#     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+# spec:
+#   selector:
+#     app: ls-backend
+#   ports:
+#     - protocol: TCP
+#       port: 80
+#       targetPort: 8080
+#       name: http-port
+#     - protocol: TCP
+#       port: 443
+#       targetPort: 8080
+#       name: https-port
+#   type: LoadBalancer
